feat(ressource&database) Modification db, swagger et ajout get sur la table ressource
