# app/Http/Requests/UpdateRessourceRequest.php
@@ -24,7 +24,11 @@ class UpdateRessourceRequest extends FormRequest
         return [
             'titre_res' => 'required|string|max:40',
             'contenu_res' => 'required|string',
-            'url_res' => 'nullable|string'
+            'url_res' => 'nullable|string',
+            'id_type_res' => 'required|integer|exists:type_ressource,id',
+            'id_rel' => 'required|integer|exists:type_ressource,id',
+            'id_vis' => 'required|integer|exists:visibilite,id',
+            'id_cat' => 'required|integer|exists:categorie,id'
         ];
     }
 }
